added serialization to all elements so we could potentially print out and debug ast or write a compiler in c++

--- a/cliq-parser/Cargo.toml
+++ b/cliq-parser/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 cliq-lexer = { path = "../cliq-lexer" }
+serde = { workspace = true }
+serde_json = { workspace = true }
