--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ resolver = "2"
 [workspace.dependencies]
 nom = "7.1.2"
 regex = "1.5.4"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.44"
